refactor(auth): implement user mapper and improve login response- Add UserMapper interface for mapping User to UserResponseDTO- Create UserResponseDTO class for detailed user information- Modify AuthController to use UserMapper and UserService for login process- Update LoginResponseDTO to use UserResponseDTO instead of individual fields- Add findUserById method in UserService for retrieving user by ID